Adding more docuementation to the README files